# octopi

./: .gitignore  CHANGELOG  CMakeLists.txt  INSTALL  OLD_PKGBUILD  PKGBUILD  README  README.md  THANKS  TRANSLATIONS  flake.nix  octopi-notifier.desktop  octopi.desktop  octopi.install  octopi.pro  pre-system-upgrade.sh  release-translations.sh  resources.qrc  run.sh
.qtc_clangd/: compile_commands.json
.tx/: config
alpm_octopi_utils/: .directory  AUTHORS  PKGBUILD
cachecleaner/: CMakeLists.txt  cachecleaner.cpp  cachecleaner.h  main.cpp  octopi-cachecleaner.desktop  octopi-cachecleaner.pro  packagegroupmodel.cpp  packagegroupmodel.h  release-languages.sh  resources.qrc
cachecleaner/.tx/: config
cachecleaner/resources/translations/: octopi_cachecleaner_af.ts  octopi_cachecleaner_af_ZA.ts  octopi_cachecleaner_ar.qm  octopi_cachecleaner_ar.ts  octopi_cachecleaner_ast.qm  octopi_cachecleaner_ast.ts  octopi_cachecleaner_be.ts  octopi_cachecleaner_be_BY.ts  octopi_cachecleaner_bg.qm  octopi_cachecleaner_bg.ts  octopi_cachecleaner_bs.ts  octopi_cachecleaner_bs_BA.qm  octopi_cachecleaner_bs_BA.ts  octopi_cachecleaner_ca.qm  octopi_cachecleaner_ca.ts  octopi_cachecleaner_cmn.qm  octopi_cachecleaner_cmn.ts  octopi_cachecleaner_cs.qm  octopi_cachecleaner_cs.ts  octopi_cachecleaner_cs_CZ.ts  octopi_cachecleaner_da.qm  octopi_cachecleaner_da.ts  octopi_cachecleaner_de.qm  octopi_cachecleaner_de.ts  octopi_cachecleaner_de_AT.qm  octopi_cachecleaner_de_AT.ts  octopi_cachecleaner_de_DE.ts  octopi_cachecleaner_el.qm  octopi_cachecleaner_el.ts  octopi_cachecleaner_en.ts  octopi_cachecleaner_en_CZ.ts  octopi_cachecleaner_en_GB.qm  octopi_cachecleaner_en_GB.ts  octopi_cachecleaner_en_IN.ts  octopi_cachecleaner_en_PL.ts  octopi_cachecleaner_en_SE.ts  octopi_cachecleaner_en_TH.ts  octopi_cachecleaner_eo.qm  octopi_cachecleaner_eo.ts  octopi_cachecleaner_es.qm  (+121 more)
cachecleaner/ui/: cachecleaner.ui
helper/: CMakeLists.txt  README.md  main.cpp  octopi-helper.pro  octopihelper.cpp  octopihelper.h
notifier/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  octopi-notifier.desktop  octopi-notifier.pro  outputdialog.cpp  outputdialog.h
notifier/octopi-notifier/: main.cpp  mainwindow.cpp  mainwindow.h  octopi-notifier.pro  outputdialog.cpp  outputdialog.h  setupdialog.cpp  setupdialog.h
notifier/octopi-notifier/ui/: outputdialog.ui  setupdialog.ui
notifier/pacmanhelper/: Makefile  README  main.cpp  pacmanhelper.cpp  pacmanhelper.h  pacmanhelper.pro  pacmanhelperadaptor.cpp  pacmanhelperadaptor.h  pacmanhelperclient.h
notifier/pacmanhelper/polkit/: org.octopi.pacman.policy  org.octopi.pacmanhelper.conf  org.octopi.pacmanhelper.service  org.octopi.pacmanhelper.xml
octopihelper/: main.cpp  octopi-helper.pro  octopihelper.cpp  octopihelper.h
repoeditor/: CMakeLists.txt  addrepo.cpp  addrepo.h  addrepo.ui  checkboxdelegate.cpp  checkboxdelegate.h  main.cpp  octopi-repoeditor.desktop  octopi-repoeditor.pro  optionsdelegate.cpp  optionsdelegate.h  qrc_resources.cpp  repoconf.cpp  repoconf.h  repoeditor.cpp  repoeditor.h  repoeditor.pro  repoeditor.ui  repoentry.cpp  repoentry.h  resources.qrc
repoeditor/.tx/: config
repoeditor/resources/: dark.qss
repoeditor/resources/translations/: octopi_repoeditor_af.ts  octopi_repoeditor_af_ZA.ts  octopi_repoeditor_ar.qm  octopi_repoeditor_ar.ts  octopi_repoeditor_ast.qm  octopi_repoeditor_ast.ts  octopi_repoeditor_be.qm  octopi_repoeditor_be.ts  octopi_repoeditor_be_BY.ts  octopi_repoeditor_bg.qm  octopi_repoeditor_bg.ts  octopi_repoeditor_bs.ts  octopi_repoeditor_bs_BA.qm  octopi_repoeditor_bs_BA.ts  octopi_repoeditor_ca.qm  octopi_repoeditor_ca.ts  octopi_repoeditor_cmn.ts  octopi_repoeditor_cs.qm  octopi_repoeditor_cs.ts  octopi_repoeditor_cs_CZ.ts  octopi_repoeditor_da.qm  octopi_repoeditor_da.ts  octopi_repoeditor_de.qm  octopi_repoeditor_de.ts  octopi_repoeditor_de_AT.ts  octopi_repoeditor_de_DE.ts  octopi_repoeditor_el.qm  octopi_repoeditor_el.ts  octopi_repoeditor_en.ts  octopi_repoeditor_en_CZ.qm  octopi_repoeditor_en_CZ.ts  octopi_repoeditor_en_GB.qm  octopi_repoeditor_en_GB.ts  octopi_repoeditor_en_IN.ts  octopi_repoeditor_en_PL.qm  octopi_repoeditor_en_PL.ts  octopi_repoeditor_en_SE.qm  octopi_repoeditor_en_SE.ts  octopi_repoeditor_en_TH.ts  octopi_repoeditor_eo.qm  (+119 more)
resources/: dark.qss
speedup/: octopi.service  speedup-octopi.sh
src/: .terminal.cpp.swp  .unixcommand.cpp.swp  alpmbackend.cpp  alpmbackend.h  argumentlist.cpp  argumentlist.h  aurvote.cpp  aurvote.h  aurvote2.cpp  aurvote2.h  constants.h  globals.cpp  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_events.cpp  mainwindow_help.cpp  mainwindow_init.cpp  mainwindow_news.cpp  mainwindow_refresh.cpp  mainwindow_searchbar.cpp  mainwindow_transaction.cpp  multiselectiondialog.cpp  multiselectiondialog.h  optionsdialog.cpp  optionsdialog.h  package.cpp  package.h  packagecontroller.cpp  packagecontroller.h  packagerepository.cpp  packagerepository.h  packagetreeview.cpp  packagetreeview.h  pacmanexec.cpp  pacmanexec.h  pacmanhelperclient.cpp  pacmanhelperclient.h  propertiestabwidget.cpp  (+32 more)
sudo/: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  main.cpp  octopi-sudo.pro  passworddialog.cpp  passworddialog.h  passworddialog.ui  qmake_qmake_qm_files.qrc  sudo.cpp
sudo/translations/: lxqt-sudo.ts  lxqt-sudo_ar.ts  lxqt-sudo_arn.ts  lxqt-sudo_bg.ts  lxqt-sudo_ca.ts  lxqt-sudo_cs.ts  lxqt-sudo_cy.ts  lxqt-sudo_da.ts  lxqt-sudo_de.ts  lxqt-sudo_el.ts  lxqt-sudo_es.ts  lxqt-sudo_et.ts  lxqt-sudo_fi.ts  lxqt-sudo_fr.ts  lxqt-sudo_gl.ts  lxqt-sudo_he.ts  lxqt-sudo_hr.ts  lxqt-sudo_hu.ts  lxqt-sudo_id.ts  lxqt-sudo_it.ts  lxqt-sudo_ja.ts  lxqt-sudo_ko.ts  lxqt-sudo_lt.ts  lxqt-sudo_nb_NO.ts  lxqt-sudo_nl.ts  lxqt-sudo_oc.ts  lxqt-sudo_pl.ts  lxqt-sudo_pt.ts  lxqt-sudo_pt_BR.ts  lxqt-sudo_ru.ts  lxqt-sudo_si.ts  lxqt-sudo_sk.ts  lxqt-sudo_sl.ts  lxqt-sudo_tr.ts  lxqt-sudo_uk.ts  lxqt-sudo_vi.ts  lxqt-sudo_zh_CN.ts  lxqt-sudo_zh_TW.ts
ui/: mainwindow.ui  multiselectiondialog.h  multiselectiondialog.ui  optionsdialog.ui  searchbar.ui  searchlineedit.ui  (+1 more)
(+1275 files in other folders)
